Bugfix for bug#5072, removed table version in BLOB table name since this is incremented at alter table